--- a/JavaTest/nbproject/private/private.properties
+++ b/JavaTest/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\emili\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=/Users/aurian/Library/Application Support/NetBeans/8.2/build.properties
