Ajout du TD4 de POO

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /TravailEmilie/nbproject/private/
 /TravailAurian/nbproject/private/
 /TravailEmilie/build/
+/Aurian/POO_TP1_Aurian/TD4_POO/nbproject/private/
+/Aurian/POO_TP1_Aurian/TD4_POO/build/
