--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /TravailEmilie/nbproject/private/
 /TravailAurian/nbproject/private/
 /TravailEmilie/build/
+/Aurian/POO/POO_TP3_DURAND_AURIAN_S2_A1/nbproject/private/
